
syntax = "proto3";

package telos.cortex.model_schema;

option go_package = "telos/cortex/model_schema";
option java_package = "com.telos.cortex.model_schema";
option java_multiple_files = true;

message ModelSchema {
	HyperParameter hyperparameters = 1;
	Parameter parameters = 2;
	ModelDetails model_details = 3;
	string attributes = 4;
}

message StrVector {
	repeated string element = 1;
}

message F32Vector {
    repeated float element = 1;
}

message HyperParameter {
	optional bool fit_intercept = 1; 
	optional float inverse_regularization  = 2; 
	optional StrVector class_weight = 3; 
	optional bool dual_formulation = 4; 
	optional float intercept_scaling = 5; 
	optional float l1_l2_ratio = 6; 
	optional int32 max_iteration = 7; 
	optional string multi_class = 8; 
	optional int32 n_cpu_cores = 9; 
	optional string regularizer = 10; 
	optional int32 random_state = 11; 
	optional string optimizer_algorithm = 12; 
	optional float error_threshold = 13; 
	optional int32 verbose = 14; 
	optional bool warm_start = 15; 
	optional string missing_value = 16; 
	optional bool check_rank = 17; 
	optional float C = 18; 
	optional bool dual = 19; 
	optional float l1_ratio = 20; 
	optional int32 max_iter = 21;
	optional float n_jobs = 22;
	optional string penalty = 23;
	optional string solver = 24;
	optional float tol = 25;
}

message Parameter {
	repeated string feature_names_in_ = 1; 
	optional int32 n_features_in_ = 2; 
	repeated int32 classes_ = 3; 
	repeated int32 n_iter_ = 4; 
	optional string coef_ = 5; 
	repeated float intercept_ = 6; 
}

message ModelDetails {
	optional string file_type = 1; 
	optional string Framework  = 2; 
	optional string Library = 3; 
	optional string Algorithm = 4; 
}
